--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+:root {
+  --blue: #1e90ff;
+  --white: #ffffff;
+  --disabled-color: #aaaaaa;
+  --light-background: #eeeeee;
+  --primary-color: #776161;
+  --secondary-color: #22c55e;
+  --success-color: #ef4444;
+  --warning-color: #22c55e;
+  --danger-color: #ef4444;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
